Extracted code from HTML, A/B both working, bumped some deps

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -11,244 +11,16 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="stylesheet" type="text/css" href="style.css" />
   <script src="/socket.io/socket.io.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.29/howler.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/screenfull.js/3.0.0/screenfull.min.js"></script>
 </head>
 <body>
   <img id="mock bg" src="assets/images/iPhone-6-idle@2x.png" width="667" height="375">
 
   <img id="joystick-bg" src="assets/images/joystick-background@2x.png" width="181" height="181">
   <img id="dir-pad" src="assets/images/dir-pad@2x.png" width="91" height="128">
+  <img id="a-pressed" src="assets/images/A-pressed@2x.png" width="101" height="101">
   <img id="b-pressed" src="assets/images/B-pressed@2x.png" width="101" height="101">
   <div id="cover"></div>
 
-  <script>
-    var startupSound = new Howl({
-      urls: ['assets/sounds/startup.wav'],
-      onplay: function () {
-        document.body.style.opacity = 1
-      }
-    })
-
-    var inputStartSound = new Howl({
-      urls: ['assets/sounds/inputStart.wav'],
-      volume: 0.1
-    })
-
-    var inputEndSound = new Howl({
-      urls: ['assets/sounds/inputEnd.wav'],
-      volume: 0.02
-    })
-
-    var socket = null
-    var rootDOM = document.getElementsByTagName('html')[0]
-
-    function preventer (e) {
-      e.preventDefault()
-    }
-
-    window.addEventListener('touchstart', preventer)
-    window.addEventListener('touchmove', preventer)
-    window.addEventListener('touchend', preventer)
-
-    function startup () {
-      if (screenfull.enabled) screenfull.request()
-      rootDOM.style.background = '#4363D4'
-      startupSound.play()
-      socket = io()
-
-      window.removeEventListener('mouseup', startup)
-      window.removeEventListener('touchend', startup)
-
-      window.addEventListener('touchstart', touchStart)
-      window.addEventListener('mousedown', touchStart)
-      window.addEventListener('touchmove', touchMove)
-      window.addEventListener('touchend', touchEnd)
-      window.addEventListener('mouseup', touchEnd)
-
-      // to dodge the double-triggering some browsers experience
-      var onFocusTimeout = null
-      window.onfocus = function () {
-        console.log('Tab became focused')
-        clearTimeout(onFocusTimeout)
-        onFocusTimeout = setTimeout(function () {
-          if (socket.disconnected) socket = io()
-          if (screenfull.enabled) screenfull.request()
-        }, 0)
-      }
-
-      window.onblur = window.onbeforeunload = function() {
-        console.log('Tab closed/unfocused -> Closing connection...')
-        socket.io.disconnect()
-        console.log(socket)
-      }
-    }
-
-    // iOS doesn't play sounds until the first touchend event
-    window.addEventListener('mouseup', startup)
-    window.addEventListener('touchend', startup)
-
-    var dirPad = document.getElementById('dir-pad')
-    var joystickBg = document.getElementById('joystick-bg')
-    var bPressed = document.getElementById('b-pressed')
-    var inputTimeout = 1000
-
-    function preventDefault (e) { e.preventDefault() }
-
-    var oldData = null
-    var joystickData = [0, 0] // x and y axis
-    var jcenter = { x: 76 + 181/2, y: 97 + 181/2 }
-    var joystickTouchId = null
-    var lastJoystickEvent = Date.now()
-
-    function tlToArray (list) {
-      var array = new Array()
-      for (var i = 0; i < list.length; ++i) array.push(list[i])
-      return array
-    }
-
-    function getJoystickTouch (e) {
-      var now = Date.now()
-      var delta = now - lastJoystickEvent
-      if (delta > inputTimeout) joystickTouchId = null
-      lastJoystickEvent = now
-      var touches = tlToArray(e.changedTouches)
-      if (joystickTouchId === null) {
-        return touches.find(function (touch) { return touch.pageX < 334 })
-      }
-      return touches.find(function (touch) {
-        return touch.identifier === joystickTouchId
-      })
-    }
-
-    function handleJoystickStart (e) {
-      var touch = getJoystickTouch(e)
-      if (!touch) return
-      joystickTouchId = touch.identifier
-      dirPad.style.opacity = joystickBg.style.opacity = 1
-      handleJoystickMove(e)
-      inputStartSound.play()
-    }
-
-    function handleJoystickMove (e) {
-      var touch = getJoystickTouch(e)
-      if (!touch) return
-
-      var dx = touch.pageX - jcenter.x
-      var dy = touch.pageY - jcenter.y
-      var theta =  Math.atan2(dy, dx)
-      theta *= 180 / Math.PI
-      if (theta < 0) theta += 360
-      var exceed = theta % 45
-      var angle = exceed < 22.5
-        ? theta - exceed
-        : theta + 45 - exceed
-      if (angle === 360) angle = 0
-
-      switch (angle) {
-        case 0:
-          joystickData = [1, 0]
-          break
-
-        case 45:
-          joystickData = [1, -1]
-          break
-
-        case 90:
-          joystickData = [0, -1]
-          break
-
-        case 135:
-          joystickData = [-1, -1]
-          break
-
-        case 180:
-          joystickData = [-1, 0]
-          break
-
-        case 225:
-          joystickData = [-1, 1]
-          break
-
-        case 270:
-          joystickData = [0, 1]
-          break
-
-        case 315:
-          joystickData = [1, 1]
-          break
-      }
-      dirPad.style.transform = 'rotate(' + (angle + 180) + 'deg)'
-    }
-
-    function handleJoystickEnd (e) {
-      var touch = getJoystickTouch(e)
-      if (!touch) return
-      joystickTouchId = null
-      joystickData = [0, 0]
-      dirPad.style.opacity = joystickBg.style.opacity = 0
-      inputEndSound.play()
-    }
-
-    var buttonTouchId = null
-    var lastButtonEvent = Date.now()
-    var buttonData = [0]
-
-    function getButtonTouch (e) {
-      var now = Date.now()
-      var delta = now - lastButtonEvent
-      if (delta > inputTimeout) buttonTouchId = null
-      lastButtonEvent = now
-      var touches = tlToArray(e.changedTouches)
-      if (buttonTouchId === null) {
-        return touches.find(function (touch) { return touch.pageX >= 334 })
-      }
-      return touches.find(function (touch) {
-        return touch.identifier === buttonTouchId
-      })
-    }
-
-    function handleButtonStart (e) {
-      var touch = getButtonTouch(e)
-      if (!touch) return
-      buttonTouchId = touch.identifier
-      buttonData = [1]
-      bPressed.style.opacity = 1
-      inputStartSound.play()
-    }
-
-    function handleButtonEnd (e) {
-      var touch = getButtonTouch(e)
-      if (!touch) return
-      buttonTouchId = null
-      buttonData = [0]
-      bPressed.style.opacity = 0
-      inputEndSound.play()
-    }
-
-    function touchStart (e) {
-      handleJoystickStart(e)
-      handleButtonStart(e)
-      sendData()
-    }
-
-    function touchMove (e) {
-      handleJoystickMove(e)
-      sendData()
-    }
-
-    function touchEnd (e) {
-      handleJoystickEnd(e)
-      handleButtonEnd(e)
-      sendData()
-    }
-
-    function sendData () {
-      var currentData = joystickData.concat(buttonData).join(',')
-      if (oldData === currentData) return
-      oldData = currentData
-      socket.emit('update', currentData)
-    }
-  </script>
+  <script src="bundle.js"></script>
 </body>
 </html>
