Added debug label with player # and ping

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -19,6 +19,7 @@
   <img id="dir-pad" src="assets/images/dir-pad@2x.png" width="91" height="128">
   <img id="a-pressed" src="assets/images/A-pressed@2x.png" width="101" height="101">
   <img id="b-pressed" src="assets/images/B-pressed@2x.png" width="101" height="101">
+  <p id="debug-label">[DEBUG] Player #?; Ping ??.</p>
   <div id="cover"></div>
 
   <script src="bundle.js"></script>
