Add QR and change data visualisation a bit

--- a/packages/ludumpad-mapper-electron/src/index.html
+++ b/packages/ludumpad-mapper-electron/src/index.html
@@ -8,6 +8,7 @@
       margin: 0;
       padding: 0;
       font-family: monospace;
+      font-size: 18px;
       background: #EEEEEE;
     }
 
@@ -15,20 +16,38 @@
       margin: 50px;
     }
 
-    * {
+    h1, h2 {
       font-size: 18px;
+    }
+
+    small {
+      font-size: 12px;
+    }
+
+    #qr-container {
+      position: absolute;
+      top: 50px;
+      right: 50px;
+      opacity: 0;
+      transition: opacity 0.3s;
+      width: 200px;
+      text-align: right;
     }
 
   </style>
 </head>
 <body>
   <h1 id="title-label"># LudumPad Mapper</h1>
-  <p id="address-label">Address: ???</p>
-  <p id="controllers"></p>
+  <p id="server-data"></p>
+  <div id="qr-container">
+    <div id="qr"></div>
+    <small><a href="https://support.apple.com/kb/PH18754">OSX Handoff</a> is available</small>
+  </div>
   <script>
     const ldMapper = require('ludumpad-mapper').default
     const beautify = require("json-beautify")
-    const ipcRenderer = require('electron').ipcRenderer
+    const { ipcRenderer, shell } = require('electron')
+    const qr = require('qr-image')
 
     const server = ldMapper({
       name: 'LudumPad Mapper Electron',
@@ -36,21 +55,40 @@
     })
     ipcRenderer.send('ludumpad-server:start', server.address)
 
+    const qrSvg = qr.imageSync(server.address, {
+      margin: 0,
+      type: 'svg'
+    })
+    const qrDOM = document.getElementById('qr')
+    qrDOM.innerHTML = qrSvg
+    setTimeout(function () {
+      document.getElementById('qr-container').style.opacity = 1
+    }, 0)
+
     const titleLabel = document.getElementById('title-label')
     titleLabel.innerHTML = `# LudumPad Mapper v${server.version}`
 
-    const addressLabel = document.getElementById('address-label')
-    addressLabel.innerHTML = `Address: ${server.address}`
-
-    const controllersDOM = document.getElementById('controllers')
+    const dataDOM = document.getElementById('server-data')
     function renderControllerInput () {
       requestAnimationFrame(renderControllerInput)
       var inputs = server.controllers
         .filter(controller => controller)
         .map(controller => controller.input)
-      const view = beautify(inputs, null, 2, 40)
-      controllersDOM.innerHTML = view.replace(/(?:\r\n|\r|\n)/g, '<br>').replace(/\s/g, '&nbsp;')
+      const view = beautify({
+        address: server.address,
+        controllers: inputs
+      }, null, 2, 40)
+      dataDOM.innerHTML = view.replace(/(?:\r\n|\r|\n)/g, '<br>').replace(/\s/g, '&nbsp;')
     }
     requestAnimationFrame(renderControllerInput)
+
+    // open browser for click on links
+    function handleLinkClick (evt) {
+      evt.preventDefault()
+      shell.openExternal(this.href)
+    }
+    Array.from(document.getElementsByTagName('a')).forEach(function (a) {
+      a.addEventListener('click', handleLinkClick)
+    })
   </script>
 </body>
