--- a/packages/ludumpad-mapper-electron/src/index.html
+++ b/packages/ludumpad-mapper-electron/src/index.html
@@ -9,7 +9,7 @@
       padding: 0;
       font-family: monospace;
       font-size: 18px;
-      background: #EEEEEE;
+      background: #6b8bef;
     }
 
     body {
